test/compte_rendu.txt
/mnt/c/Users/subti/Université/Projets/Codage/Sh/jaiccv1/test/main.c:1:10: fatal error: ../include/main.h: No such file or directory
    1 | #include "../include/main.h"
      |          ^~~~~~~~~~~~~~~~~~~
compilation terminated.
